CNN for mnist done

--- a/1_Learning_keras.ipynb
+++ b/1_Learning_keras.ipynb
@@ -306,13 +306,7 @@
       "400/400 [==============================] - 0s 88us/step - loss: 0.5424 - acc: 0.7375\n",
       "Epoch 83/150\n",
       "400/400 [==============================] - 0s 90us/step - loss: 0.5326 - acc: 0.7350\n",
-      "Epoch 84/150\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 84/150\n",
       "400/400 [==============================] - 0s 95us/step - loss: 0.5395 - acc: 0.7300\n",
       "Epoch 85/150\n",
       "400/400 [==============================] - 0s 95us/step - loss: 0.5403 - acc: 0.7450\n",
@@ -2267,7 +2261,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.8"
   },
   "toc": {
    "base_numbering": 1,
