--- a/2_Regression_keras.ipynb
+++ b/2_Regression_keras.ipynb
@@ -61,7 +61,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/Users/vpa/Desktop/project/berkeley/research/data_science/ML_keras\r\n"
+      "/Users/vpa/Desktop/project/berkeley/research/data_science/ML_keras\n"
      ]
     }
    ],
@@ -104,7 +104,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.8"
   },
   "toc": {
    "base_numbering": 1,
